[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/menu/MenuGoBack.tscn" type="PackedScene" id=1]
[ext_resource path="res://code/menu/CharSelectMenu.gd" type="Script" id=2]
[ext_resource path="res://scenes/menu/CharSel.tres" type="SpriteFrames" id=3]

[node name="CharSelectMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="MenuGoBack" parent="." instance=ExtResource( 1 )]

[node name="Selected" type="AnimatedSprite" parent="."]
position = Vector2( -85.3072, -89.797 )
z_index = 10
frames = ExtResource( 3 )
animation = "selected"

[node name="BeginButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 243.923
margin_top = 960.585
margin_right = 487.923
margin_bottom = 1068.58
text = "BEGIN"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="back_select" from="MenuGoBack" to="." method="_on_MenuGoBack_back_select"]
[connection signal="pressed" from="BeginButton" to="." method="_on_BeginButton_pressed"]
